# skeleton-etl

./: .pre-commit-config.yaml  README.md  pyproject.toml
skeleton_etl/connections/: abstract.py  filesystem.py
skeleton_etl/message_types/: abstract.py  product_demo.py  type_registry.py
skeleton_etl/models/: gateway.py  message.py  transfer.py
skeleton_etl/selection_policies/: abstract.py  all.py
skeleton_etl/stores/: abstract.py  memory.py
tests/: test_connection.py  test_gateway.py  test_type_registry.py  test_ubis_etl.py
tests/data/: input.csv
