[tool.poetry]
name = "skeleton-etl"
version = "0.1.0"
description = ""
authors = ["crwr45 <charlie.wheelerrobinson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
